design-principles-02/src/main/java/com/farhad/example/design_principles02/lsp/demo1/good/Turnable.java
package com.farhad.example.design_principles02.lsp.demo1.good;

public interface Turnable {
	void turnLeft();
	void turnRight();
}
